After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 624349 - Fix a compiler warning
Fix a compiler warning
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-07-14 15:06 UTC by Emmanuele Bassi (:ebassi)
Modified: 2010-07-16 16:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gail-util: Constify gchar argument (2.12 KB, patch)
2010-07-14 15:06 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Emmanuele Bassi (:ebassi) 2010-07-14 15:06:05 UTC
A gchar* argument should be constified to avoid a compiler warning.
Comment 1 Emmanuele Bassi (:ebassi) 2010-07-14 15:06:07 UTC
Created attachment 165884 [details] [review]
gail-util: Constify gchar argument

And avoid a compiler warning.
Comment 2 Benjamin Otte (Company) 2010-07-16 16:38:48 UTC
Comment on attachment 165884 [details] [review]
gail-util: Constify gchar argument

Looks a lot like http://git.gnome.org/browse/gtk+/commit/?h=rendering-cleanup&id=4c167086681c6c41942989c3b24c1599e4e4df6e
Comment 3 Emmanuele Bassi (:ebassi) 2010-07-16 16:44:31 UTC
Attachment 165884 [details] pushed as e42c29c - gail-util: Constify gchar argument