gail-util: Constify gchar argument

And avoid a compiler warning.

https://bugzilla.gnome.org/show_bug.cgi?id=624349